<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundActivity"
    tools:context=".ui.fragment.DetailPropertyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height_120"
            android:layout_margin="@dimen/margin_5"
            tools:listitem="@layout/item_photo_detail" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_2"
            app:cardCornerRadius="@dimen/margin_5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_type"
                    style="@style/text_item_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="center"
                    android:textColor="@color/primary"
                    tools:text="Manor" />

                <TextView
                    android:id="@+id/text_price"
                    style="@style/text_item_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="center"
                    android:textColor="@color/primary"
                    tools:text="$ 1 200 000 " />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="@dimen/margin_2"
            app:cardCornerRadius="@dimen/margin_5">

            <TextView
                android:id="@+id/text_description"
                style="@style/text_item_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbars="vertical"
                tools:text="Le lorem ipsum est, en imprimerie, une suite de mots sans signification utilisée à titre provisoire pour calibrer une mise en page.une suite de mots sans signification utilisée à titre provisoire pour calibrer une mise en page" />

        </androidx.cardview.widget.CardView>
        </ScrollView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_2"
            app:cardCornerRadius="@dimen/margin_5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_area"
                        android:drawablePadding="@dimen/margin_5"
                        android:drawableTint="@color/primary"
                        android:gravity="center"
                        android:padding="@dimen/margin_5"
                        android:text="@string/property_area"
                        tools:targetApi="m" />

                    <TextView
                        android:id="@+id/property_area"
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        tools:text="250" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_home"
                        android:drawablePadding="@dimen/margin_5"
                        android:drawableTint="@color/primary"
                        android:gravity="center"
                        android:padding="@dimen/margin_5"
                        android:text="@string/number_of_room"
                        tools:targetApi="m" />

                    <TextView
                        android:id="@+id/property_room"
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        tools:text="8" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_bedroom"
                        android:drawablePadding="@dimen/margin_5"
                        android:drawableTint="@color/primary"
                        android:gravity="center"
                        android:padding="@dimen/margin_5"
                        android:text="@string/number_of_bedroom"
                        tools:targetApi="m" />

                    <TextView
                        android:id="@+id/property_bedroom"
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        tools:text="4" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_bath"
                        android:drawablePadding="@dimen/margin_5"
                        android:drawableTint="@color/primary"
                        android:gravity="center"
                        android:padding="@dimen/margin_5"
                        android:text="@string/number_of_bathroom"
                        tools:targetApi="m" />

                    <TextView
                        android:id="@+id/property_bathroom"
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        tools:text="2" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_2"
            app:cardCornerRadius="@dimen/margin_5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_date"
                        android:drawablePadding="@dimen/margin_5"
                        android:drawableTint="@color/primary"
                        android:gravity="center"
                        android:padding="@dimen/margin_5"
                        android:text="@string/entry_date"
                        tools:targetApi="m" />

                    <TextView
                        android:id="@+id/entry_date"
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        tools:text="24/02/2022" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_compromise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_date"
                        android:drawablePadding="@dimen/margin_5"
                        android:drawableTint="@color/primary"
                        android:gravity="center"
                        android:padding="@dimen/margin_5"
                        android:text="@string/compromise_signed"
                        tools:targetApi="m" />

                    <TextView
                        android:id="@+id/compromise_date"
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        tools:text="24/02/2020" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_sold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_date"
                        android:drawablePadding="@dimen/margin_5"
                        android:drawableTint="@color/primary"
                        android:gravity="center"
                        android:padding="@dimen/margin_5"
                        android:text="@string/sold_date"
                        tools:targetApi="m" />

                    <TextView
                        android:id="@+id/sold_date"
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        tools:text="24/02/2020" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_2"
            app:cardCornerRadius="@dimen/margin_5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_5"
                    android:layout_weight="50"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/ic_location"
                        android:drawablePadding="@dimen/margin_5"
                        android:drawableTint="@color/primary"
                        android:padding="@dimen/margin_5"
                        android:text="@string/location"
                        tools:targetApi="m" />

                    <TextView
                        android:id="@+id/property_address"
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:gravity="center"
                        tools:text="21 jump street, NewYork 10000" />

                    <TextView
                        android:id="@+id/poi_hospital"
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:text="@string/hospital"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/poi_school"
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:text="@string/school"
                        android:visibility="gone"/>
                    <TextView
                        android:id="@+id/poi_market"
                        style="@style/text_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:text="@string/market"
                        android:visibility="gone"/>

                </LinearLayout>

                <ImageView
                    android:id="@+id/mini_Map"
                    android:padding="@dimen/margin_2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/width_200"
                    android:layout_margin="@dimen/margin_2"
                    android:layout_weight="50"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_update"
            style="@style/edit_text_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="@dimen/margin_10"
            android:background="@drawable/border_radius"
            android:clickable="true"
            android:drawableStart="@drawable/ic_update"
            android:drawablePadding="@dimen/margin_10"
            android:focusable="true"
            android:text="@string/update_property_informations"
            android:textColor="@color/icons" />
    </LinearLayout>
</ScrollView>
